# veri-zexe

./: .gitignore  Cargo.toml  README.md  constraints.txt  flake.nix  shell.nix  trace.txt  usenix-ae.md
.github/workflows/: build.yaml
benches/: dpc_algo.rs
src/: bench.rs  constants.rs  errors.rs  keys.rs  lib.rs  structs.rs  transaction.rs  types.rs  utils.rs
src/circuit/: local_data.rs  mod.rs  policies_vfy.rs  structs.rs  utxo.rs
src/examples/: mod.rs  restricted_zcash_example.rs  tornado_cash_example.rs  zcash_example.rs
src/predicates/: mod.rs
src/proofs/: mod.rs  policies_vfy.rs  predicates.rs  transaction.rs  utxo.rs
