[package]
name = "veri-zexe"
description = "Decentralized Private Computation with Universal Setup"
authors = ["Espresso Systems <hello@espressosys.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# Arkworks
ark-std = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false }
ark-ec = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-ed-on-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, rev = "677b4ae751a274037880ede86e9b6f30f62635af"}
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"], rev = "677b4ae751a274037880ede86e9b6f30f62635af"}
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", rev = "677b4ae751a274037880ede86e9b6f30f62635af"}

# Jellyfish
jf-plonk = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-rescue = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-primitives = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish.git" }

anyhow = { version = "^1.0", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
sha2 = { version = "0.10.1", default-features = false }
hkdf = "0.12.0"
chacha20poly1305 = "0.9.0"
curve25519-dalek = "4.0.0-pre.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
